--- a/index.html
+++ b/index.html
@@ -8,6 +8,34 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="container top-header">
+            <div class="logo">logo</div>
+            <nav><ul>
+                <li>
+                    link
+                </li>
+                <li>
+                    link
+                </li>
+                <li>
+                    link
+                </li>
+                <li>
+                    link
+                </li>
+                <li>
+                    link
+                </li>
+            </ul></nav>
+            <div class="login">login</div>
+        </div>
+    </header>
+    <section>
+
+    </section>
+    <section>
+
+    </section>
 </body>
 </html>
