--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             <div class="login">login</div>
         </div>
     </header>
-    <section>
-
+    <section class="row1">
+        <div class="container central"></div>
     </section>
-    <section>
+    <section class="row2 ">
 
     </section>
 </body>
