6 rows, missing footer and dotted

--- a/index.html
+++ b/index.html
@@ -34,8 +34,41 @@
     <section class="row1">
         <div class="container central"></div>
     </section>
-    <section class="row2 ">
+    <section class="row2">
+        <div class="container"> 
+            <div class="item big">
 
+            </div>
+            <div class="item small">
+
+            </div>
+        </div>
+    </section>
+    <section class="row3">
+        <div class="container"> 
+            <div class="item small">
+
+            </div>
+            <div class="item big">
+                
+            </div>
+        </div>
+    </section>
+    <section class="row4 ">
+        <div class="container "> 
+            <div class="item big">
+
+            </div>
+            <div class="item small">
+                
+            </div>
+        </div>
+    </section>
+    <section class="row5">
+        <div class="container">
+            <div class="ultra"></div>
+
+        </div>
     </section>
 </body>
 </html>
