solved dotted problem

--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
         </div>
     </header>
     <section class="row1">
-        <div class="container central"></div>
+        <div class="container">
+            <div class="item central">
+
+            </div>
+        </div>
     </section>
     <section class="row2">
         <div class="container"> 
@@ -66,9 +70,12 @@
     </section>
     <section class="row5">
         <div class="container">
-            <div class="ultra"></div>
+            <div class="item ultra"></div>
 
         </div>
+    </section>
+    <section class="row6">
+        <div class="item"></div>    
     </section>
 </body>
 </html>
