--- a/index.html
+++ b/index.html
@@ -74,8 +74,22 @@
 
         </div>
     </section>
-    <section class="row6">
-        <div class="item"></div>    
+
+
+<footer>
+    <section class="foot1">
+        <div class="container">
+            <div class="item-footer special container"></div>
+            <div class="item-footer super container">
+                <div class="item-footer inside"></div>
+                <div class="item-footer inside"></div>
+                <div class="item-footer inside"></div>
+                <div class="item-footer inside"></div>
+        </div>
     </section>
+    <section>
+
+    </section>
+</footer>
 </body>
 </html>
