--- a/index.html
+++ b/index.html
@@ -87,8 +87,11 @@
                 <div class="item-footer inside"></div>
         </div>
     </section>
-    <section>
-
+    <section class="footer2">
+        <div class="container footer-content">
+            <div class="logo2 bottom-content">Logo</div>
+            <div class="button bottom-content">Bottone</div>
+        </div>
     </section>
 </footer>
 </body>
