--- a/index.html
+++ b/index.html
@@ -9,34 +9,37 @@
 </head>
 <body>
     <header>
-        <div class="container top-header">
-            <div class="logo">logo</div>
-            <nav><ul>
-                <li>
-                    link
-                </li>
-                <li>
-                    link
-                </li>
-                <li>
-                    link
-                </li>
-                <li>
-                    link
-                </li>
-                <li>
-                    link
-                </li>
-            </ul></nav>
-            <div class="login">login</div>
-        </div>
-    </header>
-    <section class="row1">
-        <div class="container">
-            <div class="item central">
-
+        <section class="old-header">
+            <div class="container top-header">
+                <div class="logo">logo</div>
+                <nav><ul>
+                    <li>
+                        link
+                    </li>
+                    <li>
+                        link
+                    </li>
+                    <li>
+                        link
+                    </li>
+                    <li>
+                        link
+                    </li>
+                    <li>
+                        link
+                    </li>
+                </ul></nav>
+                <div class="login">login</div>
             </div>
-        </div>
+         </section>
+        <section class="jumbotron container">
+            <div class="container">
+                <div class="item central">
+    
+                </div>
+            </div>
+    </header>
+
     </section>
     <section class="row2">
         <div class="container"> 
